--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 Flask-PyMongo==2.3.0
 pymongo==4.8.0
 gunicorn==23.0.0
@@ -8,6 +7,5 @@ google-auth==2.23.4
 google-auth-oauthlib==1.1.0
 google-api-python-client==2.108.0
 openpyxl==3.1.2
-
-
-
+pdf2docx==0.5.8   
+xhtml2pdf
